adding debugging stuff to the main script

--- a/LLM_Atari/Makefile
+++ b/LLM_Atari/Makefile
@@ -17,6 +17,10 @@ train:
 # === Predict: run interpreter with optional ARGS ===
 predict:
 	python $(PREDICT_SCRIPT) $(ARGS)
+	
+	
+full: train predict
+	
 
 # === Overfit: train tiny model and test it ===
 overfit:
