adding encode function

--- a/LLM_Atari/Makefile
+++ b/LLM_Atari/Makefile
@@ -33,6 +33,13 @@ overfit:
 overfit_real:
 		@echo "🚧 Running overfit test from the main script (model: debug)..."
 		python $(TRAIN_SCRIPT) --model_name debug --epochs 2000 --train_file overfit_tiny.txt\
-		--val_file overfit_tiny.txt --model_name debug_overfit
+		--val_file overfit_tiny_2.txt --model_name debug_overfit
 		@echo "🧠 Testing debug model with prompt 'the':"
-		python $(PREDICT_SCRIPT) --model_name debug_overfit --k 1 --prompt "the " --generate 100		
+		python $(PREDICT_SCRIPT) --model_name debug_overfit --k 1 --prompt "the " --generate 100	
+		
+overfit_real_old:
+		@echo "🚧 Running overfit test from the main script (model: debug)..."
+		python $(TRAIN_SCRIPT).old  --epochs 2000 --train_file overfit_tiny.txt\
+		--val_file overfit_tiny_2.txt --model_name debug_overfit_old
+		@echo "🧠 Testing debug model with prompt 'the':"
+		python $(PREDICT_SCRIPT) --model_name debug_overfit_old --k 1 --prompt "the " --generate 100	
